--- a/index.html
+++ b/index.html
@@ -3314,7 +3314,7 @@
       </h1>
       <div class="boxes">
         <div class="box bg-gray-lightest">
-          <span style="font-size:0.9rem;font-weight:bold;">咨微医药科技有限公司</span> <span style="float: right;color: gray;">2021 年 6 月 ~ 2024年 8月</span>
+          <span style="font-size:0.9rem;font-weight:bold;">咨微医药科技有限公司</span> <span style="float: right;color: gray;">2021 年 6 月 ~ 2024年 8 月</span>
         </div>
         <div class="box bg-gray-lightest p-y-0">
           <div class="row g-32">
@@ -3336,7 +3336,7 @@
       </div>
       <div class="boxes">
         <div class="box bg-gray-lightest">
-          <span style="font-size:0.9rem;font-weight:bold;">福建正孚软件有限公司</span> <span style="float: right;color: gray;">2019 年 10 月 ~ 2021 年 月</span>
+          <span style="font-size:0.9rem;font-weight:bold;">福建正孚软件有限公司</span> <span style="float: right;color: gray;">2019 年 10 月 ~ 2021 年 5 月</span>
         </div>
         <div class="box bg-gray-lightest p-y-0">
           <div class="row g-32">
